--- a/BTE320_In_Class_Assignments.ipynb
+++ b/BTE320_In_Class_Assignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5/+pNtu3fXqwrFMQRiG9B",
+      "authorship_tag": "ABX9TyNtZf2ebfBQVSrjkelHP4d+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "zWrysNIIy4ob",
         "colab": {
@@ -93,6 +93,212 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base_fee = 5.0\n",
+        "hourly_rate = 2.50\n",
+        "min_fee = 10.0\n",
+        "max_fee = 20.0\n",
+        "if calculated_fee < min_fee:\n",
+        "  calculated_fee = min_fee\n",
+        "if calculated_fee > max_fee:\n",
+        "  calculated_fee = max_fee\n",
+        "print(\"Hours\\tFee($)\")\n",
+        "for hours in range(1, 9):\n",
+        "    calculated_fee = base_fee + (hourly_rate * hours)\n",
+        "    final_fee = (calculated_fee)\n",
+        "    final_fee = (final_fee)\n",
+        "print(f\"{hours}\\t{final_fee:.2f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 216
+        },
+        "id": "XQLl3sxA840e",
+        "outputId": "8fd460da-8bcc-4f4a-cead-cb2f6bcd461a"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'calculated_fee' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-979425216.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mmin_fee\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mmax_fee\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m20.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mcalculated_fee\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mmin_fee\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m   \u001b[0mcalculated_fee\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmin_fee\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mcalculated_fee\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mmax_fee\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'calculated_fee' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hour\", \"Fee\")\n",
+        "for hour in range(1, 9):\n",
+        "  fee = 5.0 + (2.50 * hour)\n",
+        "  if fee < 10.0:\n",
+        "    fee = 10.0\n",
+        "  elif fee > 20:\n",
+        "    fee=20\n",
+        "  print(f\"{hour}   {fee}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uGSczVDqD5Sx",
+        "outputId": "4ad3a899-f994-4b67-a1b5-ccb1e44f7572"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hour Fee\n",
+            "1   10.0\n",
+            "2   10.0\n",
+            "3   12.5\n",
+            "4   15.0\n",
+            "5   17.5\n",
+            "6   20.0\n",
+            "7   20\n",
+            "8   20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "standardatten= 20.0\n",
+        "ticket= 10.0\n",
+        "print(\"Ad$\\tProfit\")\n",
+        "\n",
+        "for ad in range(0, 201, 25):\n",
+        "  ad= ad*1.0\n",
+        "  revenue= (20+(2*round(ad** 0.5))) * ticket\n",
+        "  costs=200+ad\n",
+        "  profit= revenue-costs\n",
+        "  print(f\"{ad}\\t{profit}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UDt7g9397dPP",
+        "outputId": "c33d10b7-9a74-43bc-ec80-93e023399e28"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ad$\tProfit\n",
+            "0.0\t0.0\n",
+            "25.0\t75.0\n",
+            "50.0\t90.0\n",
+            "75.0\t105.0\n",
+            "100.0\t100.0\n",
+            "125.0\t95.0\n",
+            "150.0\t90.0\n",
+            "175.0\t85.0\n",
+            "200.0\t80.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Hour\", \"Fee\")\n",
+        "hour = 1\n",
+        "while hour <= 8:\n",
+        "  fee = 5.0 + (2.50 * hour)\n",
+        "  if fee < 10.0:\n",
+        "    fee = 10.0\n",
+        "  elif fee > 20:\n",
+        "    fee=20\n",
+        "  print(f\"{hour}   {fee}\")\n",
+        "  hour += 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BJogU0LjyKTp",
+        "outputId": "441505d8-d7fb-43ca-b70f-133c1b040b2b"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hour Fee\n",
+            "1   10.0\n",
+            "2   10.0\n",
+            "3   12.5\n",
+            "4   15.0\n",
+            "5   17.5\n",
+            "6   20.0\n",
+            "7   20\n",
+            "8   20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "standardatten= 20.0\n",
+        "ticket= 10.0\n",
+        "print(\"Ad$\\tProfit\")\n",
+        "ad=0\n",
+        "while ad <201:\n",
+        "  ad = ad*1.0\n",
+        "  revenue= (20+(2*round(ad** 0.5))) * ticket\n",
+        "  costs=200+ad\n",
+        "  profit= revenue-costs\n",
+        "  print(f\"{ad}\\t{profit}\")\n",
+        "  ad += 25"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "98mpZMeTyP37",
+        "outputId": "ea2f7a55-464d-4eb3-feff-b2a69b48d97a"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ad$\tProfit\n",
+            "0.0\t0.0\n",
+            "25.0\t75.0\n",
+            "50.0\t90.0\n",
+            "75.0\t105.0\n",
+            "100.0\t100.0\n",
+            "125.0\t95.0\n",
+            "150.0\t90.0\n",
+            "175.0\t85.0\n",
+            "200.0\t80.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
