--- a/BTE320_In_Class_Assignments.ipynb
+++ b/BTE320_In_Class_Assignments.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtZf2ebfBQVSrjkelHP4d+",
+      "authorship_tag": "ABX9TyOoYOYL69ixEZ7m/pgru8fT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -120,7 +120,7 @@
         "id": "XQLl3sxA840e",
         "outputId": "8fd460da-8bcc-4f4a-cead-cb2f6bcd461a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -237,7 +237,7 @@
         "id": "BJogU0LjyKTp",
         "outputId": "441505d8-d7fb-43ca-b70f-133c1b040b2b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,9 +278,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "98mpZMeTyP37",
-        "outputId": "ea2f7a55-464d-4eb3-feff-b2a69b48d97a"
+        "outputId": "b2376f07-6540-4754-8707-21cffe59fdc3"
       },
-      "execution_count": 12,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -296,6 +296,94 @@
             "150.0\t90.0\n",
             "175.0\t85.0\n",
             "200.0\t80.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'Scissors'.lower()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "KRoXFHKuFXA2",
+        "outputId": "38073f68-f070-43d9-dbbf-ce6431e78fbe"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'scissors'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "\n",
+        "play= input(\"Do you want to play a game (y/n?)\")\n",
+        "\n",
+        "while play == \"y\":\n",
+        "  player= input(\"Choose b/w rock, paper, scissors\")\n",
+        "  computer= random.choice(['rock', 'paper', 'scissors'])\n",
+        "\n",
+        "  print(f\"Player: {player}\")\n",
+        "  print(f\"Computer: {computer}\")\n",
+        "\n",
+        "  if player == computer:\n",
+        "    print(\"Draw\")\n",
+        "  elif player == \"rock\":\n",
+        "    if computer == \"scissors\":\n",
+        "      print(\"Player wins!\")\n",
+        "  elif player == \"paper\":\n",
+        "    if computer == \"rock\":\n",
+        "      print(\"Player wins!\")\n",
+        "  elif player == \"scissors\":\n",
+        "    if computer == \"paper\":\n",
+        "      print(\"Player wins!\")\n",
+        "\n",
+        "  else:\n",
+        "    print (\"Computer wins!\")\n",
+        "\n",
+        "  play= input(\"Do you want to play a game (y/n?)\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "osNAvET2_VhZ",
+        "outputId": "70970b2a-92a1-40fa-a157-ce6bbbf20b14"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Do you want to play a game (y/n?)y\n",
+            "Choose b/w rock, paper, scissorsrock\n",
+            "Player: rock\n",
+            "Computer: rock\n",
+            "Draw\n",
+            "Do you want to play a game (y/n?)y\n",
+            "Choose b/w rock, paper, scissorsrock\n",
+            "Player: rock\n",
+            "Computer: scissors\n",
+            "Player wins!\n"
           ]
         }
       ]
